@@ -6,14 +6,14 @@ import java.util.List;
 
 public class SuperBrick extends Brick {
     private List<Image> img;
-    private Image currentImage;
+    private Image current_img;
 
     public SuperBrick(double x, double y) {
-        super(x, y, GameConstants.SUPER_BRICK_HP, GameConstants.SUPER_TYPE);
-        img = new ArrayList<>();
+        super(x, y, GameConstants.STRONG_BRICK_HP, GameConstants.STRONG_TYPE);
+        this.img = new ArrayList<>();
         img.add(ImgManager.getInstance().getImage("PURPLE_BRICK"));
         img.add(ImgManager.getInstance().getImage("PURPLE_BRICK_"));
-        currentImage = img.getFirst();
+        current_img = img.get(0);
     }
 
     public void render(GraphicsContext gc) {
